--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "pidusage": "^3.0.2"
+    "express": "^4.18.2"
   }
 }
